--- a/HedgeModManager/Languages/pt-PT.xaml
+++ b/HedgeModManager/Languages/pt-PT.xaml
@@ -8,8 +8,8 @@
     <system:String x:Key="CommonUIOK"     >OK</system:String>
     <system:String x:Key="CommonUICancel" >Cancelar</system:String>
     <system:String x:Key="CommonUIYes"    >Sim</system:String>
+    <system:String x:Key="CommonUIBlocked">Bloqueado</system:String>
     <system:String x:Key="CommonUINo"     >Não</system:String>
-    <system:String x:Key="CommonUIBlocked"    >Bloqueado</system:String>
     <system:String x:Key="CommonUIRetry"  >Tentar Novamente</system:String>
     <system:String x:Key="CommonUIUpdate" >Atualizar</system:String>
     <system:String x:Key="CommonUIDelete" >Apagar</system:String>
@@ -29,6 +29,8 @@
     <system:String x:Key="MainUISaveAndPlay"   >Guardar e Jogar</system:String>
     <system:String x:Key="MainUIPlay"          >Jogar</system:String>
     <system:String x:Key="MainUIMLDownloadFail">Falha ao transferir o carregador de mods.</system:String>
+    <system:String xml:space="preserve" x:Key="MainUIMLInstallFail">Falha ao instalar o carregador de mods.&#x0a;Por favor verifica que tens permissões para escrever ficheiros do jogo.</system:String>
+    <system:String xml:space="preserve" x:Key="MainUIMLUninstallFail">Falha ao desinstalar o carregador de mods.&#x0a;Por favor verifica que não tens nenhum jogo em execução.</system:String>
 
     <!-- Mods UI Strings -->
     <system:String x:Key="ModsUIName"           >Nome</system:String>
@@ -41,6 +43,7 @@
     <system:String x:Key="ModsUIModConfigure"   >Configurar mod</system:String>
     <system:String x:Key="ModsUIModOpenFolder"  >Abrir pasta do conteúdo</system:String>
     <system:String x:Key="ModsUIModCheckUpdates">Procurar atualizações</system:String>
+    <system:String x:Key="ModsUICheckUpdatesAll">Procurar atualizações para todos os mods</system:String>
     <system:String x:Key="ModsUIModEdit"        >Editar mod</system:String>
     <system:String x:Key="ModsUIModDelete"      >Remover mod</system:String>
     <system:String x:Key="ModsUIModDragDrop"    >Arrasta items para alterar a ordem de carregamento de mods.</system:String>
@@ -173,4 +176,7 @@
     <system:String x:Key="ModDownloaderNoGame">Falha ao Encontrar Jogo</system:String>
     <system:String x:Key="ModDownloaderNoGameMes">O Hedge Mod Manager foi incapaz de encontrar uma instalação de {0}</system:String>
 
+    <!-- Mod Updates Window Strings -->
+    <system:String x:Key="ModUpdatesChangelog">Changelog</system:String>
+  
 </ResourceDictionary>
