--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -12,6 +12,7 @@
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <local:ModUpdateStatusConverter x:Key="ModUpdateStatusConverter"/>
+        <local:ModSupportsSaveConverter x:Key="ModSupportsSaveConverter"/>
         <ContextMenu x:Key="ModContextMenu">
             <MenuItem Header="{DynamicResource ModsUIModDescription}" Click="UI_Description_Click" InputGestureText="(Ctrl+D)"/>
             <MenuItem Header="{DynamicResource ModsUIModFavorite}" Click="UI_Favorite_Click" InputGestureText="(Alt+F)"/>
@@ -67,7 +68,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="{DynamicResource ModsUIVersion}"     Width="60"  DisplayMemberBinding="{Binding Version}"/>
                                         <GridViewColumn Header="{DynamicResource ModsUIAuthor}"      Width="89"  DisplayMemberBinding="{Binding Author}"/>
-                                        <GridViewColumn Header="{DynamicResource ModsUISupportSave}" Width="105" DisplayMemberBinding="{Binding SupportsSave}"/>
+                                        <GridViewColumn Header="{DynamicResource ModsUISupportSave}" Width="105" DisplayMemberBinding="{Binding SupportsSave, Converter={StaticResource ModSupportsSaveConverter}}"/>
                                         <GridViewColumn Header="{DynamicResource ModsUIHasUpdate}"   Width="70"  DisplayMemberBinding="{Binding UpdateServer, Converter={StaticResource ModUpdateStatusConverter}}"/>
                                     </GridView>
                                 </ListView.View>
